--- a/src/styles/sections/follow.scss
+++ b/src/styles/sections/follow.scss
@@ -26,7 +26,7 @@
 
     &__list {
         display: flex;
-        overflow-x: scroll;
+        overflow: auto;
     }
 
     &__picture {
