--- a/src/styles/sections/ingredients.scss
+++ b/src/styles/sections/ingredients.scss
@@ -65,7 +65,6 @@
         }
 
         &__item {
-            min-width: px-to-rem(1300);
             margin: 0 auto;
         }
 
